--- a/codestudio/proj2/css/main2.css
+++ b/codestudio/proj2/css/main2.css
@@ -1,62 +1,89 @@
+@font-face {
+    font-family: marags;
+    src: url(../fonts/marags-webfont.woff2) format("woff2"),
+    url(../fonts/marags-webfont.woff) format("woff");
+}
+
 .header{
+    background-color: blanchedalmond;
+    width: 100%;
+}
+
+.header__text{
+    margin: auto;
+    max-width: 70%;
+    padding-bottom: 20px;
+    
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 40px;
+}
+
+.header__nav{
     margin: 40px;
 }
 
-.nav__circles{
-    margin: 0 auto 15px auto;
-}
-
-.nav__circles ul{
+.header__nav ul{
     padding: 0;
     margin: 0;
     list-style-type: none;
     display: flex;
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 40px;
 }
 
-.nav__circles_circle1 {
+.header__nav_circle1 {
     height: 40px;
     width: 40px;
     background-color: yellowgreen;
     border: 3px solid olivedrab;
     border-radius: 50%;
     display: flex;
-    margin: 20px 0 10px 0px ;
+    margin: 0 0 10px 0px ;
   }
 
-.nav__circles_circle1:hover{
+.header__nav_circle1:hover{
     background-color: olivedrab
   }
 
-.nav__circles_circle2 {
+  .header__nav_circle2 {
     height: 40px;
     width: 40px;
     background-color: olivedrab;
     border: 3px solid yellowgreen;
     border-radius: 50%;
     display: flex;
-    margin: 20px 0 10px 10px;
+    margin: 0 0 10px 10px;
   }
 
-.nav__circles_circle2:hover{
+.header__nav_circle2:hover{
     
 }
+
+h1, h2{font-family: marags, Arial, Helvetica, sans-serif;}
+
+h2{color: olivedrab;}
+
 body {
     margin: auto;
-    background-color: antiquewhite;
+    background-color: blanchedalmond;
 }
 .body__container {
     background-color: yellowgreen;
     }
-    
-h1, h2{font-family: Arial, Helvetica, sans-serif;}
 
-h2{color: olivedrab;}
+.body__container_text {
+    max-width: 70%;
+    margin: auto;
+    padding: 20px 0 0 0;
+    }
 
 p{
     line-height: 2rem;
     font-size: 20px;
     font-family: Helvetica, Arial, sans-serif;
-    padding: 40px;
+    color: olivedrab;
     transition: all 0.3s ease;
 }
 .breaker {
@@ -93,3 +120,5 @@ color: olivedrab;
 transform: scale(5.0);
 font-size: 1.5rem;
 }
+
+ 
