--- a/assignments/assignment-2/css/main.css
+++ b/assignments/assignment-2/css/main.css
@@ -1,14 +1,26 @@
-.header{
-    margin: 40px;
+@font-face {
+    font-family: cigra;
+    src: url(../fonts/cigra-webfont.woff) format("woff");
+}
+
+body {
+    margin: auto;
+    background-color: hsl(78, 100%, 92%);
 }
 
 .nav__circles{
-    margin: 40px;
+    background-color: hsl(78, 100%, 92%);
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    align-items: center;
 }
 
 .nav__circles ul{
-    padding: 0;
-    margin: 0;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+    margin: 0px;
     list-style-type: none;
     display: flex;
 }
@@ -20,7 +32,8 @@
     border: 3px solid hsl(75, 50%, 40%);
     border-radius: 50%;
     display: flex;
-    margin: 20px 0 10px 0px ;
+    margin: 0px ;
+    z-index: 2;
   }
 
 .nav__circles_circle1:hover{
@@ -34,23 +47,29 @@
     border: 3px solid hsl(69, 78%, 49%);
     border-radius: 50%;
     display: flex;
-    margin: 20px 0 10px 10px;
+    margin-left: 10px;
+    z-index: 2;
   }
 
 .nav__circles_circle2:hover{
     background-color: hsl(69, 78%, 49%);
 }
-body {
-    margin: auto;
-    background-color: hsl(89, 78%, 92%);
+
+.header{
+    margin: 40px;
+    width: 70%;
+    z-index: 3;
 }
-.body__container {
+
+.container {
     background-color: hsl(69, 78%, 49%);
     }
     
-h1, h2{font-family: 'Syne Tactile', cursive;}
+h1, h2{font-family: Arial, Helvetica, sans-serif;
+font-weight: 100;}
 
-h1{font-size: 50px;}
+h1{font-size: 50px;
+margin: 10px 0 10px 0;}
 
 h2{color: hsl(75, 50%, 40%);
 font-size: 30px;}
@@ -61,8 +80,9 @@ p{
     font-family: Helvetica, Arial, sans-serif;
     padding: 40px;
     transition: all 0.3s ease;
+    width: 70%;
 }
-.breaker {
+.breaker1 {
     display: inline-block;
     width: 20px;
     height: 20px;
@@ -70,19 +90,35 @@ p{
     border-radius: 100px;
     transition: all 2.0s ease;
 }
-.breaker:hover {
+.breaker1:hover {
     width: 200px;
     height: 50px;
     
 }
-
+.breaker2 {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border:3px solid hsl(75, 50%, 40%);
+    border-radius: 100px;
+    transition: all 2.0s ease;
+}
+.breaker2:hover {
+    width: 200px;
+    height: 20px;
+    
+}
 @media(max-width:800px) {
     .nav__circles{
         margin: 20px;
     }
 
     .header{
-        margin: 25px;
+        margin: 0px;
+        padding-left: 25px;
+        padding-right: 25px;
+        width: 100%;
+        box-sizing: border-box;
     }
 
     h1{font-size: 30px;}
@@ -92,6 +128,8 @@ p{
 
     p{
         padding: 20px;
+        width: 100%;
+        box-sizing: border-box;
     }
 }
 
