--- a/assignments/assignment-2/css/main2.css
+++ b/assignments/assignment-2/css/main2.css
@@ -1,9 +1,10 @@
 .header{
     margin: 40px;
+    width: 70%;
 }
 
 .nav__circles{
-    margin: 0 auto 15px auto;
+    margin: 40px;
 }
 
 .nav__circles ul{
@@ -41,14 +42,15 @@
 }
 body {
     margin: auto;
-    background-color: hsl(89, 78%, 92%);
+    background-color: hsl(78, 100%, 92%);
 }
 
-.body__container {
-    background-color: hsl(75, 50%, 40%);
+.container {
+    background-color: hsl(69, 78%, 49%);
     }
 
-    h1, h2{font-family: 'Syne Tactile', cursive;}
+    h1, h2{font-family: Arial, Helvetica, sans-serif;
+        font-weight: 100;}
 
     h1{font-size: 50px;}
     
@@ -62,13 +64,14 @@ p{
     font-family: Helvetica, Arial, sans-serif;
     padding: 40px;
     transition: all 0.3s ease;
-    color: hsl(75, 50%, 40%);
+    color: hsl(69, 78%, 42%);
+    width: 70%;
 }
 .breaker {
     display: inline-block;
     width: 20px;
     height: 20px;
-    border:3px solid hsl(75, 50%, 40%);
+    border:3px solid hsl(69, 78%, 42%);
     border-radius: 100px;
     transition: all 2.0s ease;
 }
@@ -85,7 +88,11 @@ p{
     }
 
     .header{
-        margin: 25px;
+        margin: 0px;
+        padding-left: 25px;
+        padding-right: 25px;
+        width: 100%;
+        box-sizing: border-box;
     }
 
     h1{font-size: 30px;}
@@ -94,6 +101,8 @@ p{
 
     p{
         padding: 20px;
+        width: 100%;
+        box-sizing: border-box;
     }
 }
 /*
