--- a/assignments/assignment-2/css/main2.css
+++ b/assignments/assignment-2/css/main2.css
@@ -1,15 +1,21 @@
-.header{
-    margin: 40px;
-    width: 70%;
+body {
+    margin: auto;
+    background-color: hsl(78, 100%, 92%);
 }
 
 .nav__circles{
-    margin: 40px;
+    background-color: hsl(78, 100%, 92%);
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    align-items: center;
 }
 
 .nav__circles ul{
-    padding: 0;
-    margin: 0;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+    margin: 0px;
     list-style-type: none;
     display: flex;
 }
@@ -21,7 +27,7 @@
     border: 3px solid hsl(75, 50%, 40%);
     border-radius: 50%;
     display: flex;
-    margin: 20px 0 10px 0px ;
+    margin: 0px ;
   }
 
   .nav__circles_circle1:hover{
@@ -35,14 +41,14 @@
     border: 3px solid hsl(69, 78%, 49%);
     border-radius: 50%;
     display: flex;
-    margin: 20px 0 10px 10px;
+    margin-left: 10px;
   }
 
   .nav__circles_circle2:hover{
 }
-body {
-    margin: auto;
-    background-color: hsl(78, 100%, 92%);
+.header{
+    margin: 40px;
+    width: 70%;
 }
 
 .container {
@@ -52,7 +58,8 @@ body {
     h1, h2{font-family: Arial, Helvetica, sans-serif;
         font-weight: 100;}
 
-    h1{font-size: 50px;}
+    h1{font-size: 50px;
+        margin: 10px 0 10px 0;}
     
     h2{color: hsl(75, 50%, 40%);
     font-size: 30px;}
