--- a/assignments/assignment-2/css/main2.css
+++ b/assignments/assignment-2/css/main2.css
@@ -74,20 +74,32 @@ p{
     color: hsl(69, 78%, 42%);
     width: 70%;
 }
-.breaker {
+.breaker1 {
     display: inline-block;
     width: 20px;
     height: 20px;
-    border:3px solid hsl(69, 78%, 42%);
+    border:3px solid hsl(75, 50%, 40%);
     border-radius: 100px;
     transition: all 2.0s ease;
 }
-.breaker:hover {
+.breaker1:hover {
     width: 200px;
     height: 50px;
     
 }
-
+.breaker2 {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border:3px solid hsl(75, 50%, 40%);
+    border-radius: 100px;
+    transition: all 2.0s ease;
+}
+.breaker2:hover {
+    width: 200px;
+    height: 20px;
+    
+}
 
 @media(max-width:800px) {
     .nav__circles{
