--- a/assignments/assignment-2/css/main.css
+++ b/assignments/assignment-2/css/main.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: cigra;
-    src: url(../fonts/cigra-webfont.woff) format("woff");
-}
-
 body {
     margin: auto;
     background-color: hsl(78, 100%, 92%);
@@ -29,7 +24,7 @@ body {
     height: 40px;
     width: 40px;
     background-color: hsl(69, 78%, 49%);
-    border: 3px solid hsl(75, 50%, 40%);
+    border: 2px solid hsl(75, 50%, 40%);
     border-radius: 50%;
     display: flex;
     margin: 0px ;
@@ -44,7 +39,7 @@ body {
     height: 40px;
     width: 40px;
     background-color: hsl(75, 50%, 40%);
-    border: 3px solid hsl(69, 78%, 49%);
+    border: 2px solid hsl(69, 78%, 49%);
     border-radius: 50%;
     display: flex;
     margin-left: 10px;
@@ -65,19 +60,30 @@ body {
     background-color: hsl(69, 78%, 49%);
     }
     
-h1, h2{font-family: Arial, Helvetica, sans-serif;
-font-weight: 100;}
+    .headalt{font-family: mayence-premium, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+    }
+
+    h1,h2{font-family: a-otf-jun-pro, sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
 
 h1{font-size: 50px;
 margin: 10px 0 10px 0;}
 
-h2{color: hsl(75, 50%, 40%);
+h2{
+    font-weight: 100;
+    color: hsl(75, 50%, 40%);
 font-size: 30px;}
 
 p{
     line-height: 2rem;
     font-size: 20px;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: a-otf-jun-pro, sans-serif;
+    font-weight: 400;
+    font-style: normal;
     padding: 40px;
     transition: all 0.3s ease;
     width: 70%;
@@ -86,7 +92,7 @@ p{
     display: inline-block;
     width: 20px;
     height: 20px;
-    border:3px solid hsl(75, 50%, 40%);
+    border:2px solid hsl(75, 50%, 40%);
     border-radius: 100px;
     transition: all 2.0s ease;
 }
@@ -99,7 +105,7 @@ p{
     display: inline-block;
     width: 20px;
     height: 20px;
-    border:3px solid hsl(75, 50%, 40%);
+    border:2px solid hsl(75, 50%, 40%);
     border-radius: 100px;
     transition: all 2.0s ease;
 }
