--- a/assignments/assignment-3/css/main.css
+++ b/assignments/assignment-3/css/main.css
@@ -1,3 +1,8 @@
+a:link { text-decoration: none; color: white;}
+a:visited { text-decoration: none; color: white; }
+a:hover {text-decoration: none; color: rgb(236, 238, 253);}
+a:active {text-decoration: none; color:white;}
+
 body{
     margin: auto;
 }
@@ -8,10 +13,19 @@ body{
     padding-left: 15%;
     padding-right: 15%;
 }
+.navContainer {display: none;
+    flex-grow: 1;
+    align-items: baseline;
+    background-color: rgb(236, 238, 253);
+    position: sticky;
+    position: -webkit-sticky;
+    top: 75px;} 
+
+.show {display:flex;}
 
 .header{
     background-color: black;
-    position: sticky;
+    position: sticky !important;
     position: -webkit-sticky;
     top: 0;
     width: 100%;
@@ -27,7 +41,6 @@ body{
 .headbuttons{
     display: flex;
     justify-content: space-between !important;
-    margin-right: 65px;
 }
 
 #title{
@@ -36,6 +49,7 @@ body{
     font-weight: 100;
     font-size: 40px;
     line-height: 10%;
+
 }
 
 h2{
@@ -44,14 +58,18 @@ h2{
     font-size: 14px;
 }
 
-.navContainer {display: flex;
+p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 100;
+    font-size: 14px;
+    display: flex;
     justify-content: space-around;
-    flex-grow: 1;
-    align-items: baseline;
-    background-color: rgb(236, 238, 253);
-    position: sticky;
-    position: -webkit-sticky;
-    top: 78px;}
+    list-style-type: none;
+}
+
+hr{
+    
+}
 
 .filter {
     padding: 20px;
@@ -64,14 +82,21 @@ h2{
 }
 
 .category1{
-    max-width: 25%;
+    width: 20%;
     margin: 20px;
     margin-top: 0px;
     flex-grow: 1;
 }
 
 .category2{
-    max-width: 60%;
+   width: 35%;
+    margin: 20px;
+    margin-top: 0px;
+    flex-grow: 1;
+}
+
+.category3{
+   width: 35%;
     margin: 20px;
     margin-top: 0px;
     flex-grow: 1;
@@ -84,6 +109,7 @@ h2{
     flex-direction: row;
     flex-wrap: wrap;
     margin: 0;
+    justify-content: flex-start;
 }
 
 nav ul li {
@@ -122,8 +148,19 @@ button{
         color: black;
         background-color: #e3fcfa;
         border: 1px solid #e3fcfa;
-        margin-right: 35px;
+
     }
     #headbutton:hover{
         background-color:rgb(236, 238, 253);
+        }
+
+        #explanation{
+            padding-top: 40px;
+            padding-left: 10px;
+            padding-bottom: 20px;
+            text-align: left !important;
+            margin-left: 10px;
+            display: flex;
+            justify-content: flex-start;
+            line-height: 120%;
         }
