--- a/assignments/assignment-3/css/main.css
+++ b/assignments/assignment-3/css/main.css
@@ -119,6 +119,7 @@ nav ul li {
 button{
     display:inline-block;
     width: 170px;
+    height: 26px;
     padding:0.3em 1.2em;
     margin:0 0.3em 0.3em 0;
     border-radius:2em;
@@ -163,4 +164,24 @@ button{
             display: flex;
             justify-content: flex-start;
             line-height: 120%;
+        }
+
+        .tagbtn{
+            color: white;
+            background-color: black;
+            width: 210px;
+            height: 26px;
+        }
+        .tagbtn:hover{
+            color: white;
+            background-color: black;
+        }
+
+        .activebtn{
+            color: white;
+            background-color: black;
+        }
+        .activebtn:hover{
+            color: white;
+            background-color: black;
         }
