--- a/codestudio/proj4/css/main.css
+++ b/codestudio/proj4/css/main.css
@@ -76,7 +76,7 @@ text-align: center;}
     0% { transform: translate(1px, 1px) rotate(0deg); }
     20% { transform: translate(-1px, 1px) rotate(-3deg); }
     50% { transform: translate(-1px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(4deg); }
+    70% { transform: translate(2px, 1px) rotate(4deg); }
     100% { transform: translate(1px, -1px) rotate(0deg); }
   }
   
@@ -101,3 +101,9 @@ background-color: yellowgreen;
     */
   }
 
+#manbody{
+  display: flex;
+  justify-content: space-around;
+  margin: auto;
+  max-width: 15%;
+}
