--- a/codestudio/proj4/css/main.css
+++ b/codestudio/proj4/css/main.css
@@ -10,13 +10,45 @@
     text-align: center;
     cursor: move;
   }*/
+  .scroll {
+    height: 40px;	
+    width: 100%;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: yellow;
+    color: orange;
+    margin: 0;
+   }
+   .scroll p {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    line-height: 50px;
+    text-align: center;
+    /* Starting position */
+    transform:translateX(100%);
+    /* Apply animation to this element */
+    animation: scroll-left 20s linear infinite;
+   }
+   /* Move it (define the animation) */
+   @keyframes scroll-left {
+    0%   {
+    transform: translateX(100%); 		
+    }
+    100% {
+    transform: translateX(-100%); 
+    }
+   }
 
   body {
     cursor: url(./cursor/boot.png);
   }
   
-  p{font-family: 'Diplomata SC', cursive;
-font-size: 100px;
+  p{font-family: 'helvetica', sans-serif;
+font-size: 18px;
 z-index: 10;
 position: absolute;
 bottom: 0px;
@@ -85,12 +117,6 @@ text-align: center;}
       margin-left: 10px;
   }
 
-  #flex{
-        display: flex;
-        justify-content: space-around; 
-    }
-
-  
   #bg {
 background-color: yellowgreen;
 
@@ -104,6 +130,301 @@ background-color: yellowgreen;
 #manbody{
   display: flex;
   justify-content: space-around;
-  margin: auto;
+  margin-left: 42.5%;
+  margin-right: 42.5%;
   max-width: 15%;
+  position: fixed;
+  top: 110px;
+  z-index: 1;
 }
+
+#manlegs{
+  margin-left: 42.5%;
+  margin-right: 42.5%;
+  max-width: 15%;
+  position: fixed;
+  top: 110px;
+  z-index: 1;
+
+}
+
+
+audio::-webkit-media-controls-panel {
+  background-color: yellow;
+  width: 150px;
+}
+
+audio::-webkit-media-controls-mute-button {
+  background-color: orange;
+  border-radius: 50%;
+}
+
+audio::-webkit-media-controls-play-button:hover {
+  background-color:  orange;
+  border-radius: 50%;
+}
+
+audio::-webkit-media-controls-current-time-display {
+  color: orange;
+}
+audio::-webkit-media-controls-time-remaining-display {
+  color: orange;
+}
+audio::-webkit-media-controls-timeline {
+  background-color: orange;
+  border-radius: 25px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+audio::-webkit-media-controls-volume-slider {
+  background-color: yellow;
+  border-radius: 25px;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+#txt{
+ position:absolute;
+ left: 90px;
+ top:10px;
+  z-index: 2;
+  animation: shake2 5s;
+    /* When the animation is finished, start again */
+    animation-iteration-count: infinite;
+}
+
+@keyframes shake2 {
+  0% { transform: translate(1px, 1px) rotate(-0.5deg); }
+  2% { transform: translate(-1px, -1px) rotate(0.5deg); }
+  4% { transform: translate(1px, 1px) rotate(-0.5deg); }
+  6% { transform: translate(-1px, -1px) rotate(0.5deg); }
+  8% { transform: translate(1px, 1px) rotate(-0.5deg); }
+  10% { transform: translate(-1px, -1px) rotate(0.5deg); }
+  12% { transform: translate(1px, 1px) rotate(-0.5deg); }
+  14% { transform: translate(-1px, -1px) rotate(0.5deg); }
+  16% { transform: translate(1px, 1px) rotate(-0.5deg); }
+  18% { transform: translate(0px, 0px) rotate(0deg); }
+  100% { transform: translate(1px, 1px) rotate(-0.5deg); }
+}
+
+#starz{
+  display: flex;
+  justify-content: space-between;
+  margin: 150px;
+  position:absolute;
+  top: 100px;
+   z-index: 1;
+ }
+
+ #leftstar{
+  animation: rotate 20s;
+  /* When the animation is finished, start again */
+  animation-iteration-count: infinite;
+ }
+
+#rightstar{
+  animation: rotate 20s;
+  /* When the animation is finished, start again */
+  animation-iteration-count: infinite;
+ }
+
+ @keyframes rotate {
+  50% { transform: rotate(359deg); }
+}
+
+#boxcontainer{
+  display: flex;
+  justify-content: space-between;
+  margin-left: 150px;
+  margin-right: 150px;
+  position: relative;
+  top: 450px;
+  z-index: 100;
+ }
+
+ #textbox{
+   height: 150px;
+   background-color: yellow;
+   color: orange;
+   border: 1px solid orange;
+   outline: none;
+   border-radius: 0;
+   font-family: 'helvetica', sans-serif;
+font-size: 18px;
+ }
+
+ #otherside{
+  display: block;
+  height: 150px;
+  width:20%;
+  color: orange;
+  font-family: 'helvetica', sans-serif;
+  font-size: 18px;
+ }
+
+ #about{
+  text-align: left;
+  font-size: 12px;
+ }
+
+ .alert{
+   display: flex;
+ }
+
+ #button{
+   width: 100%;
+   height: 50px;
+   background-color: yellow;
+   color: orange;
+   font-size: 18px;
+   border: 1px solid orange;
+   outline: none;
+   padding: 5px;
+   text-align: center;
+ }
+
+ #button:hover{
+  animation: shake 0.3s;
+  background-color: orange;
+  color: yellow;
+ }
+
+ #textalt{
+   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
+   font-size: 24px;
+ }
+
+.head, .bod, .legs{
+  display: none;
+}
+
+#boot1{
+  z-index: 1;
+  position: relative;
+  left: 20px;
+  top: -20px;
+}
+
+#nashead{
+  z-index: 3;
+  position: absolute;
+  left: 573px;
+  top: 90px;
+}
+
+#head2{
+  z-index: 3;
+  position: absolute;
+  left: 564px;
+  top: 85px;
+}
+
+#head3{
+  z-index: 3;
+  position: absolute;
+  left: 573px;
+  top: 82px;
+}
+
+#horsehead{
+  z-index: 3;
+  position: absolute;
+  left: 575px;
+  top: 82px;
+}
+
+#head5{
+  z-index: 3;
+  position: absolute;
+  left: 593px;
+  top: 66px;
+}
+
+#head6{
+  z-index: 3;
+  position: absolute;
+  left: 561px;
+  top: 90px;
+}
+
+#nasbod{
+  z-index: 2;
+  position: absolute;
+  left: 559px;
+  top: 178px;
+}
+
+#bodycover{
+  background-color: white;
+  border: 3px solid magenta;
+  width: 900px;
+  height: 400px;
+z-index: 1;
+position: absolute;
+  left: 550px;
+  top: 177px; 
+}
+
+#shirt2{
+  z-index: 2;
+  position: absolute;
+  left: 550px;
+  top: 177px;
+}
+
+#shirt3{
+  z-index: 2;
+  position: absolute;
+  left: 470px;
+  top: 80px;
+}
+
+#shirt4{
+  z-index: 2;
+  position: absolute;
+  left: 540px;
+  top: 160px;
+}
+
+#shirt5{
+  z-index: 2;
+  position: absolute;
+  left: 540px;
+  top: 38px;
+}
+
+#pants1{
+  z-index: 1;
+  position: absolute;
+  left: 450px;
+  top: 305px;
+}
+
+#pants2{
+  z-index: 1;
+  position: absolute;
+  left: 535px;
+  top: 312px;
+}
+
+#pants3{
+  z-index: 1;
+  position: absolute;
+  left: 555px;
+  top: 328px;
+}
+
+#pants4{
+  z-index: 1;
+  position: absolute;
+  left: 540px;
+  top: 130px;
+}
+
+#pants5{
+  z-index: 1;
+  position: absolute;
+  left: 552px;
+  top: 316px;
+}
+
